--- a/_config.yml
+++ b/_config.yml
@@ -115,8 +115,8 @@ disqus:
 
 #################################### global configure #######################################
 
-username: minixalpha
-baseurl: /StrayBirds
+username: skydirge
+baseurl: /
 markdown: redcarpet
 safe: false
 highlighter: pygments
